--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ yarn-error.log*
 .DS_Store
 .AppleDouble
 .LSOverride
+Icon?
+._*
 
 # System files
 Thumbs.db
@@ -43,13 +45,21 @@ tmp/
 temp/
 dist/
 build/
+public/
+
+# Vue.js specific files
+/.cache/
+*.local
+*.log
+/node_modules/
+/coverage/
+/npm-debug.log*
 
 # Coverage files (if using testing tools)
 coverage/
 
 # Git files
 .git/
-
 
 # Miscellaneous
 *.swp
