--- a/package.json
+++ b/package.json
@@ -2,5 +2,15 @@
   "dependencies": {
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3"
+  },
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
+  "devDependencies": {
+    "@vue/cli-service": "^5.0.8",
+    "@vue/compiler-sfc": "^3.5.13",
+    "vue-template-compiler": "^2.7.16"
   }
 }
